--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/*impostazioni generali*/
 * {
   box-sizing: border-box;
   margin: 0;
@@ -5,21 +6,41 @@
 }
 .container {
   text-align: center;
-  margin-top: 50px;
+  margin-top: 100px;
+  margin-bottom: 20px;
 }
 h2 {
   margin:30px 0;
+  padding: 30px 0;
 }
-/* impostazioni immagini*/
+h3 {
+  padding: 30px 0;
+}
+.where, .how, .why {
+  background-color: #F9F9F9;
+}
 img {
   height: 200px;
 }
-.how img {
-  height: 250px;
+/* /impostazioni generali/
+
+/* WHY */
+.why > .container > div {
+  margin: 50px 0px;
+  border-bottom: 1px solid grey;
+}
+.why > .container > div:last-child {
+  margin-bottom: 0;
+  border-bottom: none;
+}
+
+.why > .container > div > p {
+  padding-bottom: 7px;
 }
 .why img {
+  height: 250px;
   background-color: #428bca;
   border-radius: 100%;
   padding: 20px;
 }
-/* /impostazioni immagini*/
+/* /WHY */
