--- a/css/12-boole.css
+++ b/css/12-boole.css
@@ -1,5 +1,5 @@
 .container {
-  width: 1170px;
+  max-width: 1170px;
   margin: 0 auto;
 }
 
@@ -9,7 +9,7 @@
   display: table;
   clear: both;
 }
-.container [class*=col-]{
+.container [class*="col-"]{
   float: left;
 }
 /* /CLEARFIX-FLOW*/
@@ -145,110 +145,115 @@
 
 /*OFFSET*/
 /*OFFSET DESKTOP*/
-.offset-lg-1 {
-  margin-left: calc((100%/12) * 1);
-}
-.offset-lg-2 {
-  margin-left: calc((100%/12) * 2);
-}
-.offset-lg-3 {
-  margin-left: calc((100%/12) * 3);
-}
-.offset-lg-4 {
-  margin-left: calc((100%/12) * 4);
-}
-.offset-lg-5 {
-  margin-left: calc((100%/12) * 5);
-}
-.offset-lg-6 {
-  margin-left: calc((100%/12) * 6);
-}
-.offset-lg-7 {
-  margin-left: calc((100%/12) * 7);
-}
-.offset-lg-8 {
-  margin-left: calc((100%/12) * 8);
-}
-.offset-lg-9 {
-  margin-left: calc((100%/12) * 9);
-}
-.offset-lg-10 {
-  margin-left: calc((100%/12) * 10);
-}
-.offset-lg-11 {
-  margin-left: calc((100%/12) * 11);
+@media screen and (min-width:993px) {
+  .offset-lg-1 {
+    margin-left: calc((100%/12) * 1);
+  }
+  .offset-lg-2 {
+    margin-left: calc((100%/12) * 2);
+  }
+  .offset-lg-3 {
+    margin-left: calc((100%/12) * 3);
+  }
+  .offset-lg-4 {
+    margin-left: calc((100%/12) * 4);
+  }
+  .offset-lg-5 {
+    margin-left: calc((100%/12) * 5);
+  }
+  .offset-lg-6 {
+    margin-left: calc((100%/12) * 6);
+  }
+  .offset-lg-7 {
+    margin-left: calc((100%/12) * 7);
+  }
+  .offset-lg-8 {
+    margin-left: calc((100%/12) * 8);
+  }
+  .offset-lg-9 {
+    margin-left: calc((100%/12) * 9);
+  }
+  .offset-lg-10 {
+    margin-left: calc((100%/12) * 10);
+  }
+  .offset-lg-11 {
+    margin-left: calc((100%/12) * 11);
+  }
 }
 /* /OFFSET DESKTOP*/
 
 /* OFFSET TABLET*/
-.offset-md-1 {
-  margin-left: calc((100%/12) * 1);
-}
-.offset-md-2 {
-  margin-left: calc((100%/12) * 2);
-}
-.offset-md-3 {
-  margin-left: calc((100%/12) * 3);
-}
-.offset-md-4 {
-  margin-left: calc((100%/12) * 4);
-}
-.offset-md-5 {
-  margin-left: calc((100%/12) * 5);
-}
-.offset-md-6 {
-  margin-left: calc((100%/12) * 6);
-}
-.offset-md-7 {
-  margin-left: calc((100%/12) * 7);
-}
-.offset-md-8 {
-  margin-left: calc((100%/12) * 8);
-}
-.offset-md-9 {
-  margin-left: calc((100%/12) * 9);
-}
-.offset-md-10 {
-  margin-left: calc((100%/12) * 10);
-}
-.offset-md-11 {
-  margin-left: calc((100%/12) * 11);
+@media screen and (min-width:769px) and (max-width:992px) {
+  .offset-md-1 {
+    margin-left: calc((100%/12) * 1);
+  }
+  .offset-md-2 {
+    margin-left: calc((100%/12) * 2);
+  }
+  .offset-md-3 {
+    margin-left: calc((100%/12) * 3);
+  }
+  .offset-md-4 {
+    margin-left: calc((100%/12) * 4);
+  }
+  .offset-md-5 {
+    margin-left: calc((100%/12) * 5);
+  }
+  .offset-md-6 {
+    margin-left: calc((100%/12) * 6);
+  }
+  .offset-md-7 {
+    margin-left: calc((100%/12) * 7);
+  }
+  .offset-md-8 {
+    margin-left: calc((100%/12) * 8);
+  }
+  .offset-md-9 {
+    margin-left: calc((100%/12) * 9);
+  }
+  .offset-md-10 {
+    margin-left: calc((100%/12) * 10);
+  }
+  .offset-md-11 {
+    margin-left: calc((100%/12) * 11);
+  }
 }
 /* /OFFSET TABLET*/
 
 /* OFFSET SMARTPHONE*/
-.offset-xs-1 {
-  margin-left: calc((100%/12) * 1);
-}
-.offset-xs-2 {
-  margin-left: calc((100%/12) * 2);
-}
-.offset-xs-3 {
-  margin-left: calc((100%/12) * 3);
-}
-.offset-xs-4 {
-  margin-left: calc((100%/12) * 4);
-}
-.offset-xs-5 {
-  margin-left: calc((100%/12) * 5);
-}
-.offset-xs-6 {
-  margin-left: calc((100%/12) * 6);
-}
-.offset-xs-7 {
-  margin-left: calc((100%/12) * 7);
-}
-.offset-xs-8 {
-  margin-left: calc((100%/12) * 8);
-}
-.offset-xs-9 {
-  margin-left: calc((100%/12) * 9);
-}
-.offset-xs-10 {
-  margin-left: calc((100%/12) * 10);
-}
-.offset-xs-11 {
-  margin-left: calc((100%/12) * 11);
+@media screen and (max-width:768px) {
+  .offset-xs-1 {
+    margin-left: calc((100%/12) * 1);
+  }
+  .offset-xs-2 {
+    margin-left: calc((100%/12) * 2);
+  }
+  .offset-xs-3 {
+    margin-left: calc((100%/12) * 3);
+  }
+  .offset-xs-4 {
+    margin-left: calc((100%/12) * 4);
+  }
+  .offset-xs-5 {
+    margin-left: calc((100%/12) * 5);
+  }
+  .offset-xs-6 {
+    margin-left: calc((100%/12) * 6);
+  }
+  .offset-xs-7 {
+    margin-left: calc((100%/12) * 7);
+  }
+  .offset-xs-8 {
+    margin-left: calc((100%/12) * 8);
+  }
+  .offset-xs-9 {
+    margin-left: calc((100%/12) * 9);
+  }
+  .offset-xs-10 {
+    margin-left: calc((100%/12) * 10);
+  }
+  .offset-xs-11 {
+    margin-left: calc((100%/12) * 11);
 }
 
 /* /OFFSET SMARTPHONE*/
