--- a/css/style.css
+++ b/css/style.css
@@ -16,9 +16,13 @@ body {
 h2 {
   margin:30px 0;
   padding: 30px 0;
+  text-transform: uppercase;
 }
 h3 {
   padding: 30px 0;
+}
+h3:hover {
+  background-color: #6FA2FF;
 }
 .where, .how, .why {
   background-color: #F9F9F9;
@@ -26,14 +30,12 @@ h3 {
 img {
   height: 200px;
 }
-/* .container > div {
-  margin: 50px 0px;
-} */
 /* /impostazioni generali/
 
 /* WHY */
 .why > .container > div {
   border-bottom: 1px solid grey;
+  margin-bottom: 20px;
 }
 .why > .container > div:last-child {
   margin-bottom: 0;
